samples/_failures_safe/1761262470_873e5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_087f95f7.c: In function ‘main’:
./samples/SAFE/__tmp_087f95f7.c:157:13: error: expected ‘;’ at end of input
  157 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_087f95f7.c:157:5: error: expected declaration or statement at end of input
  157 |     return 0
      |     ^~~~~~
